--- a/501-ethics-privacy.qmd
+++ b/501-ethics-privacy.qmd
@@ -3,8 +3,8 @@
 ```{r ethics-privacy-setup}
 #| results: asis
 #| echo: false
-source("_common.R")
-status("complete")
+#source("_common.R")
+#status("complete")
 ```
 
 ## Privacy and Data Science 
