--- a/510-ethics-checklist.qmd
+++ b/510-ethics-checklist.qmd
@@ -3,8 +3,8 @@
 ```{r ethics-checklist}
 #| echo: false
 #| results: asis
-source("_common.R")
-status("complete")
+#source("_common.R")
+#status("complete")
 ```
 
 ## Videos / Chapters 
