--- a/302-edav-analysis.qmd
+++ b/302-edav-analysis.qmd
@@ -38,7 +38,7 @@ library("ggplot2")
 library("GGally")
 
 colours <- colorspace::adjust_transparency(
-  col = PrettyCols::prettycols(name = "Fun", n = 3),
+  col = PrettyCols::prettycols(palette = "Fun", n = 3),
   alpha = 0.6)
 
 ggpairs(iris,mapping = aes(col = Species)) +
