--- a/index.qmd
+++ b/index.qmd
@@ -34,7 +34,7 @@ This interdisciplinary course will draw from fields including statistics, comput
 
 ## Schedule {-}
 
-These notes are intended for students on the course **MATH70076: Data Science** in the academic year 2023/24.
+These notes are intended for students on the course **MATH70076: Data Science** in the academic year 2024/25.
 
 As the course is scheduled to take place over five weeks, the suggested schedule is:
 
@@ -67,21 +67,22 @@ On successful completion of this module students should be able to:
 
 **Independent Study:** 100 hours (11 hours per week + 45 hours coursework)
 
-**Drop-In Sessions:** Each week there will be a 2-hour optional drop-in session to address any questions about the course or material. This is where you can get support from the course lecturer or GTA on the topics covered each week, either individually or in small groups.
+**Drop-In Sessions:** Each week there will be an optional drop-in session to address any questions about the course or material. This is where you can get support from the course lecturer or GTA on the topics covered each week, either individually or in small groups.
 
-These will be held on Fridays 15:00-17:00 in Huxley 711C. 
+These will be held on Fridays 14:00-15:00 in Huxley 711C. 
 
-**Office Hours:** Additionally, there will be an office hour each week. This is a weekly opportunity for 1-1 discussion with the course lecturer to address any individual questions, concerns or problems that you might have. These meetings can be in person or on Teams and can be academic (relating to course content or progress) or pastoral (relating to student well-being) in nature. To book a 1-1 meeting please use the link on the course blackboard page.
 
-Office hours will be held on Mondays 15:00-16:00 in Huxley 6M20. (Week 3 alteration, 14:00-15:00)
+<!--**Office Hours:** Additionally, there will be an office hour each week. This is a weekly opportunity for 1-1 discussion with the course lecturer to address any individual questions, concerns or problems that you might have. These meetings can be in person or on Teams and can be academic (relating to course content or progress) or pastoral (relating to student well-being) in nature. To book a 1-1 meeting please use the link on the course blackboard page. 
+
+Office hours will be held on Mondays 15:00-16:00 in Huxley 6M20. (Week 3 alteration, 14:00-15:00) -->
 
 ## Assessment Structure {-}
 
 The course will be assessed entirely by coursework, reflecting the practical and pragmatic nature of the course material.
 
-**Coursework 1 (30%):** To be completed during the final week of the course, the week commencing 2024-02-12.
+**Coursework 1 (30%):** A reproducible data journalism task, to be completed during one week of the course.
 
-**Coursework 2 (70%):** To be released during the third week of the course and submitted following the examination period in Summer term (2024-01-29 until 2024-05-15 at 13:00). 
+**Coursework 2 (70%):** A student-led development of a data product, e.g. an in depth statistical analysis, portfolio website, R package or dashboard. To be released during the course and submitted following the examination period in Summer term. 
 
 ## Acknowledgements {-}
 
