--- a/202-data-webscraping.qmd
+++ b/202-data-webscraping.qmd
@@ -40,7 +40,7 @@ A basic HTML page with no styling applied might look something like this:
   <title>Page title</title>
 </head>
 <body>
-  <h1 id='first'>A level 1 heading</h1>
+  <h1> id='first'>A level 1 heading</h1>
   <p>Hello World!</p>
   <p>Here is some plain text &amp; <b>some bold text.</b></p>
   <img src='myimg.png' width='100' height='100'>
